--- a/Userland/Applications/ThemeEditor/CMakeLists.txt
+++ b/Userland/Applications/ThemeEditor/CMakeLists.txt
@@ -4,11 +4,21 @@ serenity_component(
 )
 
 compile_gml(ThemeEditor.gml ThemeEditorGML.h theme_editor_gml)
+compile_gml(AlignmentProperty.gml AlignmentPropertyGML.h alignment_property_gml)
+compile_gml(ColorProperty.gml ColorPropertyGML.h color_property_gml)
+compile_gml(FlagProperty.gml FlagPropertyGML.h flag_property_gml)
+compile_gml(MetricProperty.gml MetricPropertyGML.h metric_property_gml)
+compile_gml(PathProperty.gml PathPropertyGML.h path_property_gml)
 
 set(SOURCES
     main.cpp
     MainWidget.cpp
     PreviewWidget.cpp
+    AlignmentPropertyGML.h
+    ColorPropertyGML.h
+    FlagPropertyGML.h
+    MetricPropertyGML.h
+    PathPropertyGML.h
     ThemeEditorGML.h
 )
 
